Reorganize Tests and Change System Library for Maximum Release Support